# Solar-System

./: .gitignore  CMakeLists.txt  LCC-CG-TP1-G3.tar.xz  engine.cpp  generator.cpp  main.cpp  parsing.cpp  readme.md  test.sh
docs/: GPATH  GRTAGS  GTAGS  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  bug.html  class_my_library_1_1_example-members.html  class_my_library_1_1_example.html  class_my_library_1_1_subclass_example-members.html  class_my_library_1_1_subclass_example.html  classes.html  conceptarithmetic.html  concepts.html  concepts.js  config  curves_8cpp.html  curves_8cpp.js  curves_8cpp_a6d6def6a76701b08284cba58066e3382_icgraph.map  curves_8cpp_a6d6def6a76701b08284cba58066e3382_icgraph.md5  curves_8cpp_a821c8cbf0a47b918c60a4912b733e6bd_cgraph.map  curves_8cpp_a821c8cbf0a47b918c60a4912b733e6bd_cgraph.md5  curves_8cpp_a821c8cbf0a47b918c60a4912b733e6bd_icgraph.map  curves_8cpp_a821c8cbf0a47b918c60a4912b733e6bd_icgraph.md5  curves_8cpp_a98b26a4263f61db7149441a99a6d35b6_cgraph.map  curves_8cpp_a98b26a4263f61db7149441a99a6d35b6_cgraph.md5  curves_8cpp_a98b26a4263f61db7149441a99a6d35b6_icgraph.map  curves_8cpp_a98b26a4263f61db7149441a99a6d35b6_icgraph.md5  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_cgraph.map  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_cgraph.md5  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_icgraph.map  curves_8cpp_abe9fa1f2a311f275f92f5b46fb2f8490_icgraph.md5  curves_8cpp_ad812fc50a0384335487e258a6f61714e_cgraph.map  curves_8cpp_ad812fc50a0384335487e258a6f61714e_cgraph.md5  curves_8cpp_ad812fc50a0384335487e258a6f61714e_icgraph.map  curves_8cpp_ad812fc50a0384335487e258a6f61714e_icgraph.md5  curves_8cpp_af68f8da25ecf53c589aa5d47f1f8e164_icgraph.map  curves_8cpp_af68f8da25ecf53c589aa5d47f1f8e164_icgraph.md5  curves_8cpp_af7cd8d9b34a073c2fd2d7d8187bcff42_icgraph.map  curves_8cpp_af7cd8d9b34a073c2fd2d7d8187bcff42_icgraph.md5  (+750 more)
reports/: fase4.aux  fase4.fdb_latexmk  fase4.fls  fase4.lof  fase4.out  fase4.tex  fase4.toc
src/: curves.cpp  curves.h  engine.cpp  generator.cpp  main.cpp  parsing.cpp  parsing.h
test_files/: test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml
test_files_phase1/: test_1_1.xml  test_1_5.xml
test_files_phase_1/: cone.3d  test_1_1.sh  test_1_2.sh
test_files_phase_2/: box.3d  cone.3d  earth.3d  jupiter.3d  mars.3d  mercury.3d  neptune.3d  saturn.3d  solar_system.sh  solar_system.template.xml  solar_system.xml  solar_system.zsh  sphere.3d  sun.3d  test_2_1.sh  test_2_2.sh  test_2_3.sh  test_2_4.sh  uranus.3d  venus.3d
test_files_phase_3/: test_3_1.xml  test_3_2.xml
test_files_phase_4/: notes for phase IV.txt  solar_system.template.xml  (+10 more)
(+770 files in other folders)
